Added missing comment. [skip ci]

--- a/packages/ckeditor5-table/theme/tablelayout.css
+++ b/packages/ckeditor5-table/theme/tablelayout.css
@@ -37,6 +37,9 @@
 				}
 			}
 
+			/* Because of setting the opacity to 0.75 to the selection handle for the layout table,
+			it overrides the similar selector in widget (specificity is higher),
+			thats why we must override it here also. */
 			&:has( .ck-widget:hover ) > .ck-widget__selection-handle {
 				opacity: 0;
 				visibility: hidden;
