--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -36,7 +36,7 @@
 
 		& > table > tbody > tr > td {
 			box-shadow: none;
-			padding: 0px 2px;
+			padding: 0;
 
 			/* Resets the `min-width` style attribute that was added by the content table style. */
 			&[style^="width:"],
@@ -71,6 +71,11 @@
 				&:focus {
 					outline: var(--ck-color-focus-border) 1px solid;
 				}
+			}
+
+			/* We need to set the offset for the caret, to make it visible and not covered by the outline. */
+			& > .ck-table-bogus-paragraph {
+				text-indent: 1px;
 			}
 		}
 
