Added comment to make the caret visible. [skip ci]

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -37,6 +37,7 @@
 		& > table > tbody > tr > td {
 			box-shadow: none;
 			padding: 0;
+			/* To make the caret visible. */
 			text-indent: 1px;
 
 			/* Resets the `min-width` style attribute that was added by the content table style. */
