--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -14,9 +14,14 @@
 
 .ck-editor__editable {
 	& .table.layout-table {
-		/* Resetting the table border-collapse property to the user agent styles. */
 		& > table {
+			/* Resetting the table border-collapse property to the user agent styles. */
 			border-collapse: separate;
+
+			/* To make the layout table outline visible when layout table is inside another layout table inside edge cells.
+			Currently this solution works on every browser except Safari. */
+			overflow: clip;
+			overflow-clip-margin: 3px;
 
 			/* The default table layout style in the editing view when the border is unset. */
 			&:not(
