Change fixed value to be a dedicated variable.[skip ci]

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -21,7 +21,7 @@
 			/* To make the layout table outline visible when layout table is inside another layout table inside edge cells.
 			Currently this solution works on every browser except Safari. */
 			overflow: clip;
-			overflow-clip-margin: 3px;
+			overflow-clip-margin: var(--ck-widget-outline-thickness);
 
 			/* The default table layout style in the editing view when the border is unset. */
 			&:not(
