Refine comments. [skip ci]

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -18,8 +18,8 @@
 			/* Resetting the table border-collapse property to the user agent styles. */
 			border-collapse: separate;
 
-			/* To make the layout table outline visible when layout table is inside another layout table inside edge cells.
-			Currently this solution works on every browser except Safari. */
+			/* Styles to make the layout table outline visible when the layout table is inside another layout table inside edge cells.
+			Currently, this solution works on every browser except Safari. */
 			overflow: clip;
 			overflow-clip-margin: var(--ck-widget-outline-thickness);
 
