--- a/packages/ckeditor5-fullscreen/theme/fullscreen.css
+++ b/packages/ckeditor5-fullscreen/theme/fullscreen.css
@@ -3,7 +3,9 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-/* Increase z-index of everything to make sure nothing sticks in front of the editor. */
+/* Increase z-index of everything to make sure nothing sticks in front of the editor.
+Disable scrollbars that can be present due to the rest of the website content. */
+html.ck-fullscreen,
 body.ck-fullscreen {
 	--ck-z-fullscreen: 10000;
 
@@ -13,15 +15,15 @@ body.ck-fullscreen {
 /*
 Fullscreen layout:
 
-<div class="ck ck-fullscreen__main-container">
+<div class="ck ck-fullscreen__main-wrapper">
 	<div class="ck ck-fullscreen__top-wrapper ck-reset_all">
 		<div class="ck ck-fullscreen__menu-bar" data-ck-fullscreen="menu-bar"></div>
 		<div class="ck ck-fullscreen__toolbar" data-ck-fullscreen="toolbar"></div>
 	</div>
 	<div class="ck ck-fullscreen__editable-wrapper">
-		<div class="ck ck-fullscreen__sidebar" data-ck-fullscreen="left-sidebar"></div>
+		<div class="ck ck-fullscreen__sidebar ck-fullscreen__left-sidebar" data-ck-fullscreen="left-sidebar"></div>
 		<div class="ck ck-fullscreen__editable" data-ck-fullscreen="editable"></div>
-		<div class="ck ck-fullscreen__sidebar" data-ck-fullscreen="right-sidebar"></div>
+		<div class="ck ck-fullscreen__sidebar ck-fullscreen__right-sidebar" data-ck-fullscreen="right-sidebar"></div>
 	</div>
 	<div class="ck ck-fullscreen__bottom-wrapper">
 		<div class="ck ck-fullscreen__body-wrapper" data-ck-fullscreen="body-wrapper"></div>
@@ -29,7 +31,7 @@ Fullscreen layout:
 </div>
 */
 
-.ck-fullscreen__main-container {
+.ck.ck-fullscreen__main-wrapper {
 	position: fixed; /* this prevents the overscroll on macos that would happen with `position: absolute`. */
 	top: 0;
 	left: 0;
@@ -47,7 +49,7 @@ Fullscreen layout:
 }
 
 /* If the fullscreen container is not directly in the body, we need to make sure it's positioned absolutely. */
-:not(body> .ck-fullscreen__main-container).ck-fullscreen__main-container {
+:not(body> .ck-fullscreen__main-wrapper).ck-fullscreen__main-wrapper {
 	position: absolute;
 }
 
@@ -55,7 +57,7 @@ Fullscreen layout:
 	border: none;
 }
 
-.ck-fullscreen__main-container .ck-fullscreen__editable-wrapper {
+.ck-fullscreen__main-wrapper .ck-fullscreen__editable-wrapper {
 	--ck-fullscreen-editor-top-margin: 28px;
 	display: flex;
 	justify-content: flex-start;
@@ -70,29 +72,29 @@ Fullscreen layout:
 	flex-shrink: 0;
 }
 
-.ck-fullscreen__sidebar[data-ck-fullscreen="right-sidebar"]{
+.ck-fullscreen__sidebar[data-ck-fullscreen="right-sidebar"] {
 	margin-right: auto;
 }
 
-.ck-fullscreen__main-container .ck-fullscreen__editable {
+.ck-fullscreen__main-wrapper .ck-fullscreen__editable {
 	margin-top: var(--ck-fullscreen-editor-top-margin);
 	margin-bottom: 56px;
 	height: 100%;
 	margin-left: auto;
 }
 
-.ck-fullscreen__main-container .ck-fullscreen__editable .ck.ck-editor__editable:not(.ck-editor__nested-editable) {
+.ck-fullscreen__main-wrapper .ck-fullscreen__editable .ck.ck-editor__editable:not(.ck-editor__nested-editable) {
 	box-sizing: border-box;
 	width: calc(210mm + 2px);
 	min-height: 297mm;
 	height: fit-content;
 	padding: 20mm 12mm;
-	border: 1px hsl(0, 0%, 82.7%) solid;
+	border: 1px var(--ck-color-base-border) solid;
 	background: hsl(0, 0%, 100%);
 	box-shadow: 0 2px 3px hsla(0, 0%, 0%, 0.078);
 }
 
-.ck-fullscreen__main-container .ck-fullscreen__editable .ck-source-editing-area {
+.ck-fullscreen__main-wrapper .ck-fullscreen__editable .ck-source-editing-area {
 	width: calc(210mm + 2px);
 }
 
@@ -114,7 +116,7 @@ Fullscreen layout:
 	--ck-user-avatar-size: 32px;
 }
 
-.ck-fullscreen__left-sidebar > :first-child {
+.ck-fullscreen__left-sidebar> :first-child {
 	padding-top: var(--ck-fullscreen-editor-top-margin);
 }
 
@@ -147,7 +149,6 @@ Fullscreen layout:
 
 .ck-fullscreen__left-sidebar--sticky {
 	position: sticky;
-	background: var(--ck-color-base-foreground);
 	top: 0;
 
 	&> :first-child {
