Improving table styles.

--- a/packages/ckeditor5-table/theme/tablecolumnresize.css
+++ b/packages/ckeditor5-table/theme/tablecolumnresize.css
@@ -25,6 +25,11 @@
 	/* To prevent text overflowing beyond its cell when columns are resized by resize handler
 	(https://github.com/ckeditor/ckeditor5/pull/14379#issuecomment-1589460978). */
 	overflow-wrap: break-word;
+}
+
+.ck.ck-editor__editable .table td,
+.ck.ck-editor__editable .table th {
+	/* The resizer element is placed inside each cell, so it must be positioned relatively to the cell. */
 	position: relative;
 }
 
