--- a/packages/ckeditor5-table/theme/table.css
+++ b/packages/ckeditor5-table/theme/table.css
@@ -3,41 +3,64 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-.ck-content .table {
+
+/* Text alignment of the table header should match the editor settings and override the native browser styling,
+when content is available outside the editor. See https://github.com/ckeditor/ckeditor5/issues/6638 */
+.ck-content[dir="rtl"] .table th {
+	text-align: right;
+}
+
+.ck-content[dir="ltr"] .table th {
+	text-align: left;
+}
+
+.ck-content figure.table:not(.layout-table) {
+	display: table;
+
+	& > table {
+		width: 100%;
+		height: 100%;
+	}
+}
+
+.ck-content figure.table:not(.layout-table),
+.ck-content table.table:not(.layout-table) {
 	/* Give the table widget some air and center it horizontally */
 	/* The first value should be equal to --ck-spacing-large variable if used in the editor context
 	to avoid the content jumping (See https://github.com/ckeditor/ckeditor5/issues/9825). */
 	margin: 0.9em auto;
-	display: table;
+}
 
-	& table {
-		/* The table cells should have slight borders */
-		border-collapse: collapse;
-		border-spacing: 0;
+.ck-content table.table:not(.layout-table),
+.ck-content figure.table:not(.layout-table) > table {
+	/* The table cells should have slight borders */
+	border-collapse: collapse;
+	border-spacing: 0;
 
-		/* Table width and height are set on the parent <figure>. Make sure the table inside stretches
-		to the full dimensions of the container (https://github.com/ckeditor/ckeditor5/issues/6186). */
-		width: 100%;
-		height: 100%;
+	/* The outer border of the table should be slightly darker than the inner lines.
+	Also see https://github.com/ckeditor/ckeditor5-table/issues/50. */
+	border: 1px double hsl(0, 0%, 70%);
 
-		/* The outer border of the table should be slightly darker than the inner lines.
-		Also see https://github.com/ckeditor/ckeditor5-table/issues/50. */
-		border: 1px double hsl(0, 0%, 70%);
+	& > thead,
+	& > tbody {
+		/* stylelint-disable no-descending-specificity */
+		& > tr {
+			& > th {
+				font-weight: bold;
+				background: hsla(0, 0%, 0%, 5%);
+			}
 
-		& td,
-		& th {
-			min-width: 2em;
-			padding: .4em;
+			& > td,
+			& > th {
+				/* stylelint-enable no-descending-specificity */
+				min-width: 2em;
+				padding: .4em;
 
-			/* The border is inherited from .ck-editor__nested-editable styles, so theoretically it's not necessary here.
-			However, the border is a content style, so it should use .ck-content (so it works outside the editor).
-			Hence, the duplication. See https://github.com/ckeditor/ckeditor5/issues/6314 */
-			border: 1px solid hsl(0, 0%, 75%);
-		}
-
-		& th {
-			font-weight: bold;
-			background: hsla(0, 0%, 0%, 5%);
+				/* The border is inherited from .ck-editor__nested-editable styles, so theoretically it's not necessary here.
+				However, the border is a content style, so it should use .ck-content (so it works outside the editor).
+				Hence, the duplication. See https://github.com/ckeditor/ckeditor5/issues/6314 */
+				border: 1px solid hsl(0, 0%, 75%);
+			}
 		}
 	}
 }
@@ -54,19 +77,9 @@
  * For now, resetting the height to `initial` in the print mode works as a workaround.
  */
 @media print {
-	.ck-content .table table {
+	.ck-content figure.table > table {
 		height: initial;
 	}
-}
-
-/* Text alignment of the table header should match the editor settings and override the native browser styling,
-when content is available outside the editor. See https://github.com/ckeditor/ckeditor5/issues/6638 */
-.ck-content[dir="rtl"] .table th {
-	text-align: right;
-}
-
-.ck-content[dir="ltr"] .table th {
-	text-align: left;
 }
 
 .ck-editor__editable .ck-table-bogus-paragraph {
