Email integration package (#18058)
Feature (table): Introduced Layout Tables to enable constructing grids with tables, for example for email editing. These tables are designed for layout purposes, and include `role="presentation"` for accessibility. Users can insert layout tables via the editor toolbar and switch between content and layout tables. The editing view now closely matches the rendered output. Closes https://github.com/ckeditor/ckeditor5/issues/18132

Feature (table): Added the ability to toggle between Content Tables and Layout Tables. Users can switch table types using a split button in the table properties UI. While captions and `<th>` elements may be lost, table structure remains intact. Closes https://github.com/ckeditor/ckeditor5/issues/18131

Feature (table): Dragging and dropping a table into another table no longer merges them. Instead, the dropped table is placed as a whole inside the target cell. Pasting tables remains unchanged. Closes https://github.com/ckeditor/ckeditor5/issues/18126

Feature (html-support): Introducing the ability to render `<style>` elements from the `<head>` section of editor data content using `FullPage` plugin. See https://github.com/ckeditor/ckeditor5/issues/13482.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-widget/widget.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-widget/widget.css
@@ -37,6 +37,13 @@
 	&:hover {
 		outline-color: var(--ck-color-widget-hover-border);
 	}
+
+	/*
+	 * Hide the outline of all widget parents when the widget is being hovered.
+	 */
+	&:has( .ck-widget:hover ) {
+		outline-color: transparent;
+	}
 }
 
 .ck .ck-editor__nested-editable {
@@ -135,6 +142,12 @@
 				opacity: 1;
 			}
 		}
+	}
+
+	/* Hide the selection handle on mouse hover over the widget of all the widget parents. */
+	&:has( .ck-widget:hover ) > .ck-widget__selection-handle {
+		opacity: 0;
+		visibility: hidden;
 	}
 }
 
