Fixed layout table cell default properties handling.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -16,6 +16,8 @@
 	& .table.layout-table {
 		& > table {
 			width: 100%;
+			height: 100%;
+
 			/* Styles to make the layout table outline visible when the layout table is inside another layout table inside edge cells.
 			Currently, this solution works on every browser except Safari. */
 			overflow: clip;
