--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-bookmark/bookmarktoolbar.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-bookmark/bookmarktoolbar.css
@@ -5,6 +5,14 @@
 
 @import "@ckeditor/ckeditor5-ui/theme/mixins/_unselectable.css";
 
+.ck.ck-bookmark-balloon {
+	& .ck.ck-toolbar {
+		& > .ck-toolbar__items {
+			flex-wrap: nowrap;
+		}
+	}
+}
+
 .ck.ck-bookmark-toolbar__preview {
 	padding: 0 var(--ck-spacing-medium);
 	max-width: var(--ck-input-width);
