Resetting  property on layout table to the user agent styles in editing view.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -23,6 +23,9 @@
 			overflow: clip;
 			overflow-clip-margin: var(--ck-widget-outline-thickness);
 
+			/* Resetting `border-collapse` property to the user agent styles. */
+			border-collapse: revert;
+
 			/* The default table layout style in the editing view when the border is unset. */
 			&:not(
 			[style*="border:"],
