--- a/packages/ckeditor5-table/theme/tablecolumnresize.css
+++ b/packages/ckeditor5-table/theme/tablecolumnresize.css
@@ -16,10 +16,6 @@
 	table-layout: fixed;
 }
 
-.ck-content .table table {
-	overflow: hidden;
-}
-
 .ck-content .table td,
 .ck-content .table th {
 	/* To prevent text overflowing beyond its cell when columns are resized by resize handler
@@ -62,8 +58,8 @@
 	   it is extended to an extremely high height. Even for screens with a very high pixel density, the resizer will fulfill its role as
 	   it should, i.e. for a screen of 476 ppi the total height of the resizer will take over 350 sheets of A4 format, which is totally
 	   unrealistic height for a single table. */
-	top: -999999px;
-	bottom: -999999px;
+	/* top: -999999px;
+	bottom: -999999px; */
 }
 
 .ck.ck-editor__editable[dir=rtl] .table .ck-table-column-resizer {
