--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -95,6 +95,8 @@
 					&.ck-widget__type-around__button_before,
 					&.ck-widget__type-around__button_after {
 						transform: translateY(0);
+						/* Same value as inline-image widget because it is after the inline-image in HTML structure */
+						z-index: 2;
 					}
 
 					&.ck-widget__type-around__button_before {
@@ -127,7 +129,9 @@
 					--ck-widget-handler-icon-size: var(--ck-table-layout-widget-handler-icon-size);
 
 					transform: translateY(calc(0px - var(--ck-widget-outline-thickness)));
-					z-index: var(--ck-z-default);
+					/* Value increased by 1 as in selected inline-image widget
+					because it is before the inline-image in HTML structure. */
+					z-index: 3;
 				}
 			}
 
