Reduce the specificity of table CSS selector regarding margins.

--- a/packages/ckeditor5-table/theme/table.css
+++ b/packages/ckeditor5-table/theme/table.css
@@ -23,8 +23,7 @@
 		}
 	}
 
-	& figure.table:not(.layout-table),
-	& table.table:not(.layout-table) {
+	& .table:not(.layout-table) {
 		/* Give the table widget some air and center it horizontally */
 		/* The first value should be equal to --ck-spacing-large variable if used in the editor context
 		to avoid the content jumping (See https://github.com/ckeditor/ckeditor5/issues/9825). */
