Allow empty sidebars to shrink.

--- a/packages/ckeditor5-fullscreen/theme/fullscreen.css
+++ b/packages/ckeditor5-fullscreen/theme/fullscreen.css
@@ -89,17 +89,6 @@ Fullscreen layout:
 	max-height: 100%;
 }
 
-.ck-fullscreen__sidebar {
-	width: 300px;
-	margin-top: var(--ck-fullscreen-editor-top-margin);
-	margin-left: 10px;
-	flex-shrink: 0;
-}
-
-.ck-fullscreen__sidebar[data-ck-fullscreen="right-sidebar"] {
-	margin-right: auto;
-}
-
 .ck-fullscreen__main-wrapper .ck-fullscreen__editable {
 	margin-top: var(--ck-fullscreen-editor-top-margin);
 	height: 100%;
@@ -114,11 +103,14 @@ Fullscreen layout:
 
 .ck-fullscreen__main-wrapper .ck-fullscreen__editable .ck.ck-editor__editable:not(.ck-editor__nested-editable) {
 	box-sizing: border-box;
-	width: calc(210mm + 2px); /* Make sure the border is taken into account. */
-	max-width: calc(210mm + 2px); /* Make sure the border is taken into account. */
+	/* Make sure the border is taken into account. */
+	width: calc(210mm + 2px);
+	/* Make sure the border is taken into account. */
+	max-width: calc(210mm + 2px);
 	min-height: 297mm;
 	height: fit-content;
-	margin: 0; /* Reset margins that may be present on editable. We add them in other places. */
+	/* Reset margins that may be present on editable. We add them in other places. */
+	margin: 0;
 	padding: 20mm 12mm;
 	border: 1px var(--ck-color-base-border) solid;
 	background: hsl(0, 0%, 100%);
@@ -127,6 +119,12 @@ Fullscreen layout:
 
 .ck-fullscreen__main-wrapper .ck-fullscreen__editable .ck-source-editing-area {
 	width: calc(210mm + 2px);
+}
+
+.ck-fullscreen__sidebar {
+	width: 300px;
+	margin-top: var(--ck-fullscreen-editor-top-margin);
+	margin-left: 10px;
 }
 
 .ck-fullscreen__left-sidebar {
@@ -141,14 +139,17 @@ Fullscreen layout:
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
+
+	> :first-child {
+		/* Set minimal width if there is any item in the sidebar. */
+		min-width: 300px;
+		/* We have to use padding-top instead of margin-top because margin is scrollable. */
+		padding-top: var(--ck-fullscreen-editor-top-margin);
+	}
 }
 
 .ck-fullscreen__left-sidebar .ck.ck-presence-list--collapsed {
 	--ck-user-avatar-size: 32px;
-}
-
-.ck-fullscreen__left-sidebar> :first-child {
-	padding-top: var(--ck-fullscreen-editor-top-margin);
 }
 
 .ck-fullscreen__left-sidebar .ck-user {
@@ -162,10 +163,15 @@ Fullscreen layout:
 .ck-fullscreen__left-sidebar-item {
 	padding: var(--ck-spacing-medium);
 	margin-bottom: var(--ck-spacing-medium);
-}
 
-.ck-fullscreen__left-sidebar-item:last-child {
-	margin-bottom: 0;
+	/* First header should not have top padding. */
+	&:first-child {
+		padding-top: 0;
+	}
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 .ck-fullscreen__left-sidebar-header {
@@ -204,4 +210,14 @@ Fullscreen layout:
 .ck-fullscreen__document-outline-wrapper {
 	padding-top: 0;
 	overflow-y: auto;
+}
+
+.ck-fullscreen__sidebar.ck-fullscreen__right-sidebar {
+	margin-top: var(--ck-fullscreen-editor-top-margin);
+	margin-right: auto;
+
+	&> :first-child {
+		/* Set minimal width if there is any item in the sidebar. */
+		min-width: 300px;
+	}
 }
