Adjusted dashed borders on tables without borders so tables pasted from office do not have mixed borders.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tableediting.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tableediting.css
@@ -30,13 +30,9 @@
 				}
 			}
 
-			/* Dashed outline for cell without border. */
+			/* Dashed outline for cell without any border. */
 			&[style*="border:none"],
-			&[style*="border-style:none"],
-			&[style*="border-left-style:none"],
-			&[style*="border-top-style:none"],
-			&[style*="border-right-style:none"],
-			&[style*="border-bottom-style:none"] {
+			&[style*="border-style:none"] {
 				outline: var(--ck-table-content-default-border-color) 1px dashed;
 				outline-offset: -1px;
 			}
