--- a/packages/ckeditor5-image/theme/imagecaption.css
+++ b/packages/ckeditor5-image/theme/imagecaption.css
@@ -15,7 +15,8 @@
 .ck-content .image > figcaption {
 	display: table-caption;
 	caption-side: bottom;
-	word-break: break-word;
+	word-break: normal;
+	overflow-wrap: anywhere;
 	color: var(--ck-color-image-caption-text);
 	background-color: var(--ck-color-image-caption-background);
 	padding: .6em;
