--- a/packages/ckeditor5-list/theme/listformatting.css
+++ b/packages/ckeditor5-list/theme/listformatting.css
@@ -3,10 +3,19 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-.ck-content li ol {
-	color: initial;
-	font-family: initial;
-	font-size: initial;
-	font-weight: initial;
-	font-style: initial;
+.ck-content li {
+	& ol {
+		color: initial;
+		font-family: initial;
+		font-size: initial;
+		font-weight: initial;
+		font-style: initial;
+	}
+	& p {
+		color: initial;
+		font-family: initial;
+		font-size: initial;
+		font-weight: initial;
+		font-style: initial;
+	}
 }
