Revert changes related to stylelint as they will be done in separate PR.

--- a/docs/assets/global.css
+++ b/docs/assets/global.css
@@ -76,6 +76,7 @@ It breaks CKEditor 5 (see how <p><code>[]</code></p> looks). */
 
 .demo-row {
 	width: 100%;
+	display: -ms-flexbox;
 	display: flex;
 }
 
