--- a/packages/ckeditor5-core/theme/core.css
+++ b/packages/ckeditor5-core/theme/core.css
@@ -9,6 +9,7 @@
 	/* stylelint-disable-next-line declaration-property-value-disallowed-list */
 	--ck-content-font-color: #000;
 	--ck-content-line-height: 1.5;
+	--ck-content-word-break: break-word
 }
 
 .ck-content {
@@ -16,4 +17,5 @@
 	font-size: var(--ck-content-font-size);
 	color: var(--ck-content-font-color);
 	line-height: var(--ck-content-line-height);
+	word-break: var(--ck-content-word-break);
 }
